refactor: replace @Autowired with constructor injection in multiple classes for improved dependency management